--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,11 @@
 <resources>
     <string name="app_name">TodoApp</string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="home">Home</string>
+    <string name="calendar">Calendar</string>
+    <string name="clock">Clock</string>
+    <string name="user">User</string>
+    <string name="todo">TODO</string>
+    <string name="home_page">Home Page</string>
 </resources>
