--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,4 +14,7 @@
     <string name="task_priority">Task Priority</string>
     <string name="save">Save</string>
     <string name="cancel">Cancel</string>
+    <string name="choose_category">Choose Category</string>
+    <string name="university">University</string>
+    <string name="add_category">Add Category</string>
 </resources>
