--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -17,4 +17,11 @@
     <string name="choose_category">Choose Category</string>
     <string name="university">University</string>
     <string name="add_category">Add Category</string>
+    <string name="create_new_category">Create new category</string>
+    <string name="category_name_">Category name:</string>
+    <string name="category_name">Category name</string>
+    <string name="category_icon">Category icon:</string>
+    <string name="chose_icon_from_library">Chose icon from library</string>
+    <string name="category_color">Category color:</string>
+    <string name="chose_icon_category">Chose icon category</string>
 </resources>
