--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,7 +11,7 @@
     <string name="add_task">Add Task</string>
     <string name="go_to_sleep">go to sleep</string>
     <string name="description">Description</string>
-    <string name="task_priority">Task Priority</string>
+    <string name="task_priority">\tTask Priority</string>
     <string name="save">Save</string>
     <string name="cancel">Cancel</string>
     <string name="choose_category">Choose Category</string>
@@ -24,4 +24,13 @@
     <string name="chose_icon_from_library">Chose icon from library</string>
     <string name="category_color">Category color:</string>
     <string name="chose_icon_category">Chose icon category</string>
+    <string name="delete_task">Delete Task</string>
+    <string name="task_title">Task Title</string>
+    <string name="task_time">\tTask Time:</string>
+    <string name="today_at">Today At</string>
+    <string name="task_category">\tTask Category:</string>
+    <string name="category">\tCategory</string>
+    <string name="default_prio">Default\t</string>
+    <string name="sub_task">\tSub - Task</string>
+    <string name="add_sub_task">Add Sub - Task</string>
 </resources>
