Display Task (Fixing bugs takes a lot of time -.-)

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -33,4 +33,5 @@
     <string name="default_prio">Default\t</string>
     <string name="sub_task">\tSub - Task</string>
     <string name="add_sub_task">Add Sub - Task</string>
+    <string name="tdisplay_category">\tdisplay category</string>>
 </resources>
